# xdotcom-media-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_kv.py
x_media_scraper/: kv.py  main.py  scraper.py
