[tool.poetry]
name = "xdotcom-media-scraper"
version = "0.1.0"
description = ""
authors = ["Oleksandr Dunaievskyi <o_dunaievskyi@proton.me>"]
readme = "README.md"
packages = [{include = "x_media_scraper"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
rich = "^13.7.1"
aiohttp = "^3.10.5"
sqlalchemy = "^2.0.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
x_media_scraper = 'x_media_scraper.main:main'